Fixes #24 (by moving index.jsp to /WEB-INF/views/home.jsp and using Spring's UrlBasedViewResolver instead of default InternalResource... one that caused endless loop). Adjusted some wait/retry settings. Etc. (minor polishing)